@@ -10,9 +10,10 @@ Features:
 Fixes:
   Redirect from / to /login does not ignore HTTP protocol type anymore(#21)
   Fixed 'Incorrect username or password' warning message overflowing input fields when it should be hidden(#20)
+  Fixed system user last login time not updated(#13)
 
 Tickets closed by this release:
-  #12,#15,#17,#20,#21,#22,#23
+  #12,#13,#15,#17,#20,#21,#22,#23
 
 
 
